lang/macro/tests/ui/fail/44-specify-struct-visibility-in-interface.stderr
error: `struct` in interface must have no visibility modifier
 --> $DIR/44-specify-struct-visibility-in-interface.rs:5:5
  |
5 |     pub struct Baz {
  |     ^^^
